nodes/kenaz.k8s/bifrost/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bifrost
  namespace: bifrost
spec:
  selector:
    app: bifrost
  ports:
    - name: http
      port: 80
      targetPort: http
